--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.5",
+    "history": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
     "react-text-loop": "^2.3.0",
     "redux": "^4.0.5",
