--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "react-starting-template",
+  "name": "ingenium-web-portal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,9 +15,11 @@
     "formik": "^2.1.5",
     "history": "4.10.1",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-otp-input": "^2.0.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.0.0",
