--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
+    "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "history": "4.10.1",
     "node-sass": "^4.14.1",
@@ -21,6 +22,7 @@
     "react-dom": "^16.13.1",
     "react-otp-input": "^2.0.2",
     "react-redux": "^7.2.1",
+    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
