--- a/.eslintrc
+++ b/.eslintrc
@@ -14,9 +14,12 @@
     "max-len": ["error", { "code": 100 }],
     "prefer-promise-reject-errors": ["off"],
     "react/jsx-filename-extension": ["off"],
-    "react/prop-types": ["warn"],
     "no-return-assign": ["off"],
     "import/prefer-default-export": ["off"],
-    "no-console": ["off"] // Remove this during final code cleanup
+    "no-console": ["warn"], // Remove this during final code cleanup
+    "react/jsx-one-expression-per-line": ["off"],
+    "no-nested-ternary": ["off"],
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }], // only allows for for loops
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
