added dynamic functionality to favicon and doc title

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ingenium Education",
+  "name": "Powered By Ingenium education",
   "icons": [
     {
       "src": "favicon.ico",
