--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-otp-input": "^2.0.2",
+    "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
@@ -31,6 +32,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "screenfull": "^5.0.2",
     "yup": "^0.29.1"
   },
   "scripts": {
