--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-file-viewer": "^1.2.1",
     "react-otp-input": "^2.0.2",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
