--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-file-viewer": "^1.2.1",
     "react-otp-input": "^2.0.2",
@@ -34,6 +35,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
+    "sweetalert2": "^10.9.0",
     "yup": "^0.29.1"
   },
   "scripts": {
