--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "react-bootstrap": "^1.0.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
-    "react-file-viewer": "^1.2.1",
     "react-mathjax-preview": "^2.1.3",
     "react-otp-input": "^2.0.2",
+    "react-pdf": "^5.0.0",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.9",
