--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
