--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^24.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-editor-inline": "^24.0.0",
+    "@ckeditor/ckeditor5-essentials": "^24.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^24.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,11 +16,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "ckeditor5-math": "^24.0.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "history": "4.10.1",
+    "ingenium-react-scripts": "^4.0.3",
     "js-sha1": "^0.6.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -22,7 +30,9 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-circular-progressbar": "^2.0.3",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
+    "react-duration-picker": "^1.1.1",
     "react-mathjax-preview": "^2.1.3",
     "react-otp-input": "^2.0.2",
     "react-pdf": "^5.0.0",
@@ -31,7 +41,6 @@
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.0.0",
-    "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
     "redux": "^4.0.5",
