--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ingenium-react-scripts": "^4.0.3",
     "js-sha1": "^0.6.0",
     "node-sass": "^4.14.1",
+    "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
