--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apexcharts": "^3.23.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "ckeditor5-math": "^24.0.0",
@@ -28,6 +29,7 @@
     "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-circular-progressbar": "^2.0.3",
