--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-duration-picker": "^1.1.1",
+    "react-loadable": "^5.5.0",
     "react-mathjax-preview": "^2.1.3",
     "react-otp-input": "^2.0.2",
     "react-pdf": "^5.0.0",
@@ -58,7 +59,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "start-sw": "http-server ./build"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -80,6 +83,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-react": "^7.20.0",
+    "http-server": "^0.12.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
