--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.13.1",
     "react-duration-picker": "^1.1.1",
     "react-loadable": "^5.5.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-mathjax-preview": "^2.1.3",
     "react-otp-input": "^2.0.2",
     "react-pdf": "^5.0.0",
@@ -60,8 +61,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start-sw": "http-server ./build"
-
+    "start-sw": "yarn build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
