--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ckeditor/ckeditor5-essentials": "^24.0.0",
     "@ckeditor/ckeditor5-paragraph": "^24.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
+    "@emotion/react": "^11.1.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
