--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "node-sass": "^4.14.1",
     "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-circular-progressbar": "^2.0.3",
     "react-datepicker": "^3.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "17.0.1",
     "react-duration-picker": "^1.1.1",
     "react-loadable": "^5.5.0",
     "react-loading-skeleton": "^2.1.1",
@@ -54,6 +54,19 @@
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
     "sweetalert2": "^10.9.0",
+    "web-vitals": "^1.1.0",
+    "workbox-background-sync": "^6.1.0",
+    "workbox-broadcast-update": "^6.1.0",
+    "workbox-cacheable-response": "^6.1.0",
+    "workbox-core": "^6.1.0",
+    "workbox-expiration": "^6.1.0",
+    "workbox-google-analytics": "^6.1.0",
+    "workbox-navigation-preload": "^6.1.0",
+    "workbox-precaching": "^6.1.0",
+    "workbox-range-requests": "^6.1.0",
+    "workbox-routing": "^6.1.0",
+    "workbox-strategies": "^6.1.0",
+    "workbox-streams": "^6.1.0",
     "yup": "^0.29.1"
   },
   "scripts": {
