--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.16.1",
     "formik": "^2.1.5",
+    "glob": "^7.1.6",
     "history": "4.10.1",
-    "ingenium-react-scripts": "^4.0.3",
+    "ingenium-react-scripts": "^4.0.4",
     "js-sha1": "^0.6.0",
     "node-sass": "^4.14.1",
     "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-circular-progressbar": "^2.0.3",
@@ -71,7 +73,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node ./addPreloadLinks.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
