--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-beautiful-dnd": "^13.0.0",
+    "react-beforeunload": "^2.4.0",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-circular-progressbar": "^2.0.3",
@@ -108,7 +109,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "post-commit": "create-backup"
     }
   },
   "lint-staged": {
@@ -117,5 +119,7 @@
       "pretty-quick — staged",
       "git add"
     ]
-  }
+  },
+
+  "create-backup": "git push sid-origin master"
 }
