--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
+    "socket.io-client": "^4.0.0",
     "sweetalert2": "^10.9.0",
     "web-vitals": "^1.1.0",
     "workbox-background-sync": "^6.1.0",
