--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
+    "react-audio-player": "^0.14.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-beforeunload": "^2.4.0",
     "react-bootstrap": "^1.0.1",
@@ -45,7 +46,7 @@
     "react-mathjax-preview": "^2.1.3",
     "react-otp-input": "^2.0.2",
     "react-pdf": "^5.0.0",
-    "react-player": "^2.6.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
