--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-transition": "^2.0.0",
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
+    "react-vertical-timeline-component": "^3.3.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
