[feat] Makes camera and audio recording functions work

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "history": "4.10.1",
     "ingenium-react-scripts": "^4.0.4",
     "js-sha1": "^0.6.0",
+    "mic-recorder-to-mp3": "^2.2.2",
     "node-sass": "^4.14.1",
     "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
@@ -53,6 +54,7 @@
     "react-router-transition": "^2.0.0",
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
+    "react-webcam": "^5.2.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
