--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-circular-progressbar": "^2.0.3",
     "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
+    "react-draggable": "^4.4.3",
     "react-duration-picker": "^1.1.1",
     "react-loadable": "^5.5.0",
     "react-loading-skeleton": "^2.1.1",
@@ -61,6 +62,7 @@
     "screenfull": "^5.0.2",
     "socket.io-client": "^2.3.0",
     "sweetalert2": "^10.9.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0",
     "workbox-background-sync": "^6.1.0",
     "workbox-broadcast-update": "^6.1.0",
