--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "17.0.1",
     "react-draggable": "^4.4.3",
     "react-duration-picker": "^1.1.1",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-loadable": "^5.5.0",
     "react-loading-skeleton": "^2.1.1",
     "react-mathjax-preview": "^2.1.3",
