--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-dom": "17.0.1",
     "react-draggable": "^4.4.3",
     "react-duration-picker": "^1.1.1",
-    "react-infinite-scroll-component": "^6.0.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-loading-skeleton": "^2.1.1",
     "react-mathjax-preview": "^2.1.3",
@@ -107,6 +107,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
