--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-beforeunload": "^2.4.0",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
+    "react-calendar": "^3.3.1",
     "react-circular-progressbar": "^2.0.3",
     "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
