--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "glob": "^7.1.6",
     "history": "4.10.1",
     "ingenium-react-scripts": "^4.0.4",
+    "intl-tel-input": "^17.0.12",
     "js-sha1": "^0.6.0",
     "node-sass": "^4.14.1",
     "plyr-react": "^3.0.7",
@@ -41,6 +42,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
     "react-duration-picker": "^1.1.1",
+    "react-intl-tel-input-v2": "^1.0.8",
     "react-loadable": "^5.5.0",
     "react-loading-skeleton": "^2.1.1",
     "react-mathjax-preview": "^2.1.3",
@@ -122,5 +124,9 @@
       "git add"
     ]
   },
-  "create-backup": "git push sid-origin master"
+  "create-backup": {
+    "*": [
+      "git push sid-origin auto"
+    ]
+  }
 }
