--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node ./addPreloadLinks.js",
+    "build": "node ./updateBuild.js && react-scripts build && node ./addPreloadLinks.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -128,5 +128,6 @@
     "*": [
       "git push sid-origin auto"
     ]
-  }
+  },
+  "buildDate": 1620902349414
 }
