--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "allowImportExportEverywhere": false,
     "codeFrame": false
   },
-  "extends": ["airbnb", "prettier", "react-app"],
+  "extends": ["airbnb", "prettier", "react-app", "plugin:react-hooks/recommended"],
   "env": {
     "browser": true,
     "jest": true
