--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "animated": "^0.2.2",
     "apexcharts": "^3.23.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
@@ -34,7 +35,7 @@
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-audio-player": "^0.14.0",
-    "react-beautiful-dnd": "^13.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-beforeunload": "^2.4.0",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^2.0.2",
@@ -44,6 +45,7 @@
     "react-draggable": "^4.4.3",
     "react-duration-picker": "^1.1.1",
     "react-infinite-scroller": "^1.2.4",
+    "react-interactable": "^0.6.4",
     "react-loadable": "^5.5.0",
     "react-loading-skeleton": "^2.1.1",
     "react-mathjax-preview": "^2.1.3",
