--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apexcharts": "^3.23.1",
+    "apexcharts": "^3.27.1",
     "aws-sdk": "^2.919.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "ckeditor5-math": "^24.0.0",
     "classnames": "^2.2.6",
@@ -110,6 +110,7 @@
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "source-map-explorer": "^2.5.2"
