--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "17.0.1",
     "react-draggable": "^4.4.3",
     "react-duration-picker": "^1.1.1",
+    "react-image-crop": "^8.6.12",
     "react-infinite-scroller": "^1.2.4",
     "react-interactable": "^0.6.4",
     "react-loadable": "^5.5.0",
@@ -58,6 +59,7 @@
     "react-router-transition": "^2.0.0",
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
+    "react-treeview": "^0.4.7",
     "react-webcam": "^5.2.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
