--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
     "react-vertical-timeline-component": "^3.3.3",
+    "react-video-thumbnail": "^0.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -134,5 +135,5 @@
       "git push sid-origin auto"
     ]
   },
-  "buildDate": 1625049190780
+  "buildDate": 1625501701661
 }
