--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@emotion/react": "^11.1.5",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -64,15 +64,16 @@
     "react-router-transition": "^2.0.0",
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
-    "react-webcam": "^5.2.3",
     "react-vertical-timeline-component": "^3.3.3",
+    "react-webcam": "^5.2.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
+    "socket.io-client": "^4.1.2",
     "sweetalert2": "^10.9.0",
-    "uuid": "^8.3.2",
     "swiper": "^6.6.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0",
     "workbox-background-sync": "^6.1.0",
     "workbox-broadcast-update": "^6.1.0",
