--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ckeditor/ckeditor5-paragraph": "^24.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@emotion/react": "^11.1.5",
+    "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
