--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-draggable": "^4.4.3",
     "react-duration-picker": "^1.1.1",
     "react-image-crop": "^8.6.12",
+    "react-indiana-drag-scroll": "^2.0.1",
     "react-infinite-scroller": "^1.2.4",
     "react-interactable": "^0.6.4",
     "react-intl-tel-input-v2": "^1.0.8",
