--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
-    "socket.io-client": "^4.1.2",
+    "socket.io-client": "2.2.0",
     "sweetalert2": "^10.9.0",
     "swiper": "^6.6.1",
     "uuid": "^8.3.2",
