--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ingenium-web-portal",
   "version": "0.1.0",
+  "proxy": "https://cors-anywhere.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-basic-styles": "^24.0.0",
@@ -150,5 +151,5 @@
       "git push sid-origin auto"
     ]
   },
-  "buildDate": 1628624653930
+  "buildDate": 1628932663061
 }
