--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ckeditor5-math": "^24.0.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.16.1",
     "firebase": "^8.6.8",
     "formik": "^2.1.5",
