--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "json2xls": "^0.1.2",
     "mic-recorder-to-mp3": "^2.2.2",
     "node-sass": "^4.14.1",
+    "pdfjs-dist": "^2.9.359",
     "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
@@ -153,5 +154,5 @@
       "git push sid-origin auto"
     ]
   },
-  "buildDate": 1632924836778
+  "buildDate": 1633675089660
 }
