--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "react-dom": "17.0.1",
     "react-draggable": "^4.4.3",
     "react-duration-picker": "1.1.0",
+    "react-h5-audio-player": "^3.7.2",
     "react-image-crop": "^8.6.12",
     "react-indiana-drag-scroll": "^2.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-interactable": "^0.6.4",
     "react-intl-tel-input-v2": "^1.0.8",
@@ -154,5 +156,5 @@
       "git push sid-origin auto"
     ]
   },
-  "buildDate": 1633675089660
+  "buildDate": 1635141766521
 }
