--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-indiana-drag-scroll": "^2.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-insta-stories": "^2.3.0",
     "react-interactable": "^0.6.4",
     "react-intl-tel-input-v2": "^1.0.8",
     "react-loadable": "^5.5.0",
