--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
     "react-time-picker": "^4.4.1",
+    "react-to-print": "^2.14.3",
     "react-vertical-timeline-component": "^3.3.3",
     "react-video-thumbnail": "^0.1.3",
     "react-webcam": "^5.2.3",
