--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "js-sha1": "^0.6.0",
     "json2xls": "^0.1.2",
     "mic-recorder-to-mp3": "^2.2.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
-    "pdfjs-dist": "^2.9.359",
+    "pdfjs-dist": "^2.12.313",
     "plyr-react": "^3.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
