commit before new branch

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.4",
     "@pdftron/pdfjs-express-viewer": "^8.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -54,6 +55,7 @@
     "react-dom": "17.0.1",
     "react-draggable": "^4.4.3",
     "react-h5-audio-player": "^3.7.2",
+    "react-horizontal-scrolling-menu": "^2.7.1",
     "react-image-crop": "^8.6.12",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -71,6 +73,7 @@
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.0.0",
+    "react-scroll-horizontal": "^1.6.6",
     "react-select": "^3.1.1",
     "react-text-loop": "^2.3.0",
     "react-time-picker": "^4.5.0",
