--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connected-react-router": "^6.8.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.16.1",
+    "dom-to-image": "^2.6.0",
     "firebase": "^8.6.8",
     "formik": "^2.1.5",
     "glob": "^7.1.6",
@@ -131,6 +132,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
@@ -163,5 +166,5 @@
       "git push sid-origin auto"
     ]
   },
-  "buildDate": 1670503241512
+  "buildDate": 1672647954361
 }
